--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,6 +33,7 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  will-change: transform;
 }
 
 .randomPizzaContainer {
@@ -48,4 +49,8 @@ form {
 
  .container {
   background-color: rgba(240, 60, 60, 0.8);
+}
+
+#pizzaGenerator {
+  will-change: transform;
 }
